--- a/_config.yml
+++ b/_config.yml
@@ -16,39 +16,38 @@ lang: en
 prefer_datetime_locale:
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: Asia/Shanghai
+timezone: America/Chicago
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: Vincent Perkins                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: Industrial Engineer   # it will display as the sub-title
 
-description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+description: 'A portfolio showcasing data analytics and data engineering projects.'
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://vinceperkins.github.io/'
 
 github:
-  username: github_username             # change to your github username
+  username: vinceperkins             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: vincentperkins            # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@doamin.com             # change to your email address
+  name: Vincent Perkins
+  email: vincentfperkins@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://github.com/vinceperkins     # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.linkedin.com/in/vincentfperkins
 
 google_site_verification:               # fill in to your verification string
 
@@ -80,10 +79,10 @@ theme_mode:   # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn: 'https://raw.githubusercontent.com/cotes2020/chirpy-images/main'
+img_cdn: 'https://raw.githubusercontent.com/vinceperkins/vinceperkins.github.io/master/images' #'https://raw.githubusercontent.com/vinceperkins/portfolio-images/main'
 
 # the avatar on sidebar, support local or CORS resources
-avatar: '/commons/avatar.jpg'
+avatar: '/commons/headshot_outside_circular.png'
 
 # boolean type, the global switch for ToC in posts.
 toc: true
@@ -190,7 +189,7 @@ exclude:
   - gulpfile.js
   - node_modules
   - package*.json
-
+  - vendor
 jekyll-archives:
   enabled: [categories, tags]
   layouts:
