--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ social:
   email: vincentfperkins@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://www.linkedin.com/in/vincentfperkins      # change to your twitter homepage
+    - https://twitter.com/vincentperkins    # change to your twitter homepage
     - https://github.com/vinceperkins     # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
