--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: Vincent Perkins                          # the main title
 
 tagline: Industrial Engineer   # it will display as the sub-title
 
-description: 'A portfolio showcasing data analytics and data engineering projects.'
+description: A portfolio showcasing data analytics and data engineering projects.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://vinceperkins.github.io/'
@@ -55,7 +55,7 @@ google_site_verification:               # fill in to your verification string
 # The end of `jekyll-seo-tag` settings
 
 google_analytics:
-  id:                  'G-V0WV65DGPD'
+  id: G-V0WV65DGPD
   # Google Analytics pageviews report settings
   pv:
     proxy_endpoint:   # fill in the Google Analytics superProxy endpoint of Google App Engine
